# basket_app_tbd

./: .gitignore  Basquet_App_es_BO.ts  CMakeLists.txt  README.md
docs/: populate_rbac.sql
src/: main.cpp
src/models/Athlete/: AthleteManager.cpp  AthleteManager.h
src/models/Auth/: AuthManager.cpp  AuthManager.h  DbManager.cpp  DbManager.h  UIGetter.cpp  UIGetter.h
src/views/: UIComponents.h
src/views/athlete/: RegisterAthleteWindow.cpp  RegisterAthleteWindow.h
src/views/login/: LoginWindow.cpp  LoginWindow.h
src/views/main/: MainWindow.cpp  MainWindow.h
